--- a/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
@@ -64,22 +64,49 @@
         android:id="@+id/url_music_backward_btn"
         android:layout_width="48dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:background="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/url_music_play_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/url_music_play_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/url_music_play_btn"
         app:srcCompat="@drawable/ic_rewind" />
 
     <ImageButton
         android:id="@+id/url_music_forward_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:background="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/url_music_play_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/url_music_play_btn"
-        app:layout_constraintTop_toTopOf="@+id/url_music_play_btn"
         app:srcCompat="@drawable/ic_fast_forward" />
 
+    <ImageButton
+        android:id="@+id/url_music_stop_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/black"
+        android:src="@drawable/ic_stop_outline_60"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/url_music_pause_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/url_music_backward_btn" />
+
+    <ImageButton
+        android:id="@+id/url_music_pause_btn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/black"
+        android:src="@drawable/ic_pause_outline_60"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/url_music_stop_btn"
+        app:layout_constraintEnd_toStartOf="@+id/url_music_forward_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/url_music_stop_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
