--- a/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
+++ b/ChordBox_android/app/src/main/res/layout/fragment_url_chord.xml
@@ -39,7 +39,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/url_music_chord_container"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/bg_url_chord_rv"
@@ -70,7 +70,7 @@
         android:id="@+id/url_music_backward_btn"
         android:layout_width="48dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="38dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/url_music_play_btn"
@@ -81,7 +81,7 @@
         android:id="@+id/url_music_forward_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="38dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
