--- a/ChordBox_android/app/src/main/res/values/themes.xml
+++ b/ChordBox_android/app/src/main/res/values/themes.xml
@@ -15,7 +15,12 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColor">@color/text_color</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:fontFamily">@font/app_font</item>
+    </style>
+
+    <style name="Theme.SplashScreen" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
